working on POST /lobbys - does not compile
